# llm_affector

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: client.rs  critique.rs  errors.rs  hallucination.rs  lib.rs  main.rs  types.rs
