[package]
name = "llm_affector"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Async Rust library for LLM-based content analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/llm_affector"
documentation = "https://docs.rs/llm_affector"
keywords = ["llm", "async", "tokio", "openai", "analysis"]
categories = ["api-bindings", "text-processing"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"  # Add this line

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "concurrent_analysis"
path = "examples/concurrent_analysis.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"